<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/trackdetail_menu_add_data"
        android:title="@string/menu_adddata"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/trackdetail_menu_camera"
        android:title="@string/menu_addpicture"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/trackdetail_menu_export"
        android:title="@string/menu_exportGPX"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/trackdetail_menu_email"
        android:title="@string/menu_send_data_pic"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="ifRoom" />

</menu>